# monitor-consulta-rededor

./: .env.example  .gitignore  CHANGELOG.md  COMO_FAZER_UPLOAD.txt  CONTRIBUTING.md  GUIA_AJUSTE_SELETORES.txt  GUIA_RAPIDO.txt  LICENSE  README.md  SETUP_INICIAL.md  check_availability.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check_availability.yml
docs/: COMO_FAZER_UPLOAD.md  GUIA_AJUSTE_SELETORES.md  GUIA_RAPIDO.md
